kubernetes/apps/stalwart/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stalwart
  labels:
    backup: enabled
    home.demivan.me/public-gateway: allowed
