kubernetes/apps/stalwart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart
  namespace: stalwart
spec:
  selector:
    app: stalwart
  ports:
    - name: http
      port: 8080
      targetPort: http
