kubernetes/apps/stalwart/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: stalwart
spec:
  parentRefs:
    - name: internal
      namespace: cilium-gateway
  hostnames:
    - mail.home.demivan.me
  rules:
    - backendRefs:
        - name: stalwart
          port: 8080
